<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <leduyhung.me.vocaloid.custom.SlidingPicture.SlidingPictureView
        android:id="@+id/sliding_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/welcome_height_layout_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/margin_small"
        android:background="@color/colorblackTransparent">

        <TextView
            android:id="@+id/txt_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/colorWhite"
            android:text="@string/welcome_intro_1"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/txt_back"
            android:layout_width="@dimen/welcome_width_text_button"
            android:layout_height="@dimen/welcome_height_text_button"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            android:background="?selectableItemBackground"
            android:textSize="@dimen/text_size_large_2"
            android:text="@string/welcome_text_back"/>

        <leduyhung.me.vocaloid.custom.Indicator.IndicatorView
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/welcome_height_text_button"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/txt_back"
            android:layout_toStartOf="@id/txt_next"
            app:indicator_dot_color="@color/colorWhite"
            app:indicator_dot_number="3"
            app:indicator_dot_distance="@dimen/welcome_distance_indicator"
            app:indicator_dot_radius="@dimen/welcome_radius_indicator"/>

        <TextView
            android:id="@+id/txt_next"
            android:layout_width="@dimen/welcome_width_text_button"
            android:layout_height="@dimen/welcome_height_text_button"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:textSize="@dimen/text_size_large_2"
            android:text="@string/welcome_text_next"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>